# educacion

./: .gitignore  analisis_correlaciones.py  ejemplo_embudo.py  embudo_interactivo.py  embudo_streamlit.py  ideas.md  main.py  prompt.md  pyproject.toml  todo.md
notebooks/: 00_exploracion_datos.ipynb  01_rezago_educativo_generacional.ipynb  02_seguridad_alimentaria_carencia.ipynb  03_continuidad_inasistencia.ipynb  04_educacion_media_superior.ipynb  05_indice_rezago_social.ipynb  06_abandono_primaria_secundaria.ipynb  embudo_educativo_interactivo.ipynb  embudo_grados_escolares.ipynb
notebooks/.ipynb_checkpoints/: 00_exploracion_datos-checkpoint.ipynb  01_rezago_educativo_generacional-checkpoint.ipynb  02_seguridad_alimentaria_carencia-checkpoint.ipynb  03_continuidad_inasistencia-checkpoint.ipynb  04_educacion_media_superior-checkpoint.ipynb  05_indice_rezago_social-checkpoint.ipynb  06_abandono_primaria_secundaria-checkpoint.ipynb  embudo_educativo_interactivo-checkpoint.ipynb
